--- a/CDE_Web_API/CDE_Web_API/CDE_Web_API.csproj
+++ b/CDE_Web_API/CDE_Web_API/CDE_Web_API.csproj
@@ -12,6 +12,7 @@
 		<PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
 		<PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.3.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.25" />
+		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.10" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.25" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.25">
 			<PrivateAssets>all</PrivateAssets>
@@ -33,8 +34,14 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Services\" />
 	  <Folder Include="Helpers\" />
-	  <Folder Include="Controllers\" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EditorConfigFiles Remove="C:\Users\ACER\OneDrive\Máy tính\Intership\CDE_Web_API\CDE_Web_API\CDE_Web_API\.editorconfig" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Include="C:\Users\ACER\OneDrive\Máy tính\Intership\CDE_Web_API\CDE_Web_API\CDE_Web_API\.editorconfig" />
 	</ItemGroup>
 </Project>
