--- a/CDE_Web_API/CDE_Web_API/CDE_Web_API.csproj
+++ b/CDE_Web_API/CDE_Web_API/CDE_Web_API.csproj
@@ -7,6 +7,10 @@
     <OutputType>WinExe</OutputType>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Content Remove="wwwroot\TaskFile\.csv" />
+  </ItemGroup>
+
 	<ItemGroup>
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
 		<PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
@@ -39,5 +43,10 @@
 
 	<ItemGroup>
 	  <None Include="C:\Users\ACER\OneDrive\Máy tính\Intership\CDE_Web_API\CDE_Web_API\CDE_Web_API\.editorconfig" />
+	  <None Include="wwwroot\account\VrmLXOQGfile" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="wwwroot\TaskFile\" />
 	</ItemGroup>
 </Project>
